src/objects/Asterisk__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Realm__c</fullName>
        <label>Realm</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebSocket_Server_URL__c</fullName>
        <label>WebSocket Server URL</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Asterisk</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Server Ip and Port</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>RealmValidation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
REGEX( Realm__c,
&quot;^([01]?\\d\\d?|2[0-4]\\d|25[0-5])\\.([01]?\\d\\d?|2[0-4]\\d|25[0-5])\\.([01]?\\d\\d?|2[0-4]\\d|25[0-5])\\.([01]?\\d\\d?|2[0-4]\\d|25[0-5])\\:(\\d{4})$&quot;
))</errorConditionFormula>
        <errorDisplayField>Realm__c</errorDisplayField>
        <errorMessage>please enter a valid realm</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidationForSErverIP_Port</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
REGEX(  Name ,
&quot;^([01]?\\d\\d?|2[0-4]\\d|25[0-5])\\.([01]?\\d\\d?|2[0-4]\\d|25[0-5])\\.([01]?\\d\\d?|2[0-4]\\d|25[0-5])\\.([01]?\\d\\d?|2[0-4]\\d|25[0-5])\\:(\\d{4})$&quot;
))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>please enter a valid ip and port</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WebSocketValidation</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNUMBER( WebSocket_Server_URL__c ), NOT(REGEX(WebSocket_Server_URL__c, &quot;^[a-zA-Z0-9://.]*$&quot;)))</errorConditionFormula>
        <errorDisplayField>WebSocket_Server_URL__c</errorDisplayField>
        <errorMessage>please enter a valid WebSocket_Server_URL__c</errorMessage>
    </validationRules>
</CustomObject>